# RustWebDev

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  log4rs.yaml  questions.json
RustBookCode/: Cargo.toml
RustBookCode/src/: main.rs
backend/: Cargo.toml
backend/migrations/: 0001_create.up.sql
backend/src/: api.rs  auth.rs  bad_words_api.rs  database.rs  main.rs
frontend/: Cargo.toml  index.html  styles.scss
frontend/src/: answer_add.rs  answer_edit.rs  main.rs  question.rs  question_form.rs  question_list.rs  question_update.rs
frontend/src/components/: footer.rs  header.rs
frontend/src/types/: mod.rs
migrations/: 0001_create.down.sql  0001_create.up.sql
src/: api.rs  database.rs  main.rs  question.rs  web.rs
