[package]
name = "rust_book_code_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Moes <moes@pdx.edu>", "Bastian Gruber"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Request", "RequestInit", "RequestMode", "Response", "HtmlInputElement", "SubmitEvent", "console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
gloo-net = "0.2"
yew-router = "0.16"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = { version = "0.4", features = ["max_level_info"] }